--- a/7-Project/package.json
+++ b/7-Project/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "LuisChavez",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "json-server": "^0.17.0",
+    "node-fetch": "^3.2.10",
+    "underscore": "^1.13.4"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.19"
+  }
 }
