--- a/7-Project/package.json
+++ b/7-Project/package.json
@@ -4,7 +4,8 @@
   "description": "ProjectoAPIconJSON-Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "LuisChavez",
   "license": "ISC",
