--- a/7-Project/package.json
+++ b/7-Project/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.js"
-  },
+    "babel-node": "babel-node --presets=@babel/preset-env",
+    "dev": "nodemon --exec npm run babel-node src/index.js"
+    },
   "author": "LuisChavez",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +17,10 @@
     "underscore": "^1.13.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
