--- a/7-Project/package.json
+++ b/7-Project/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node --presets=@babel/preset-env",
     "dev": "nodemon --exec npm run babel-node src/index.js"
-    },
+  },
   "author": "LuisChavez",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "json-server": "^0.17.0",
+    "lowdb": "^3.0.0",
     "node-fetch": "^3.2.10",
     "underscore": "^1.13.4"
   },
